[gd_scene load_steps=8 format=2]

[ext_resource path="res://items/burner/burner.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0, 0.0490196, 0.367647, 0.647059, 0.852941, 0.946078 )
colors = PoolColorArray( 0.160784, 0.678431, 1, 1, 1, 1, 1, 1, 1, 0.92549, 0.152941, 1, 1, 0.639216, 0, 1, 1, 0, 0.301961, 1, 0.113725, 0.168627, 0.32549, 1 )

[sub_resource type="GradientTexture" id=2]

flags = 4
gradient = SubResource( 1 )
width = 2048

[sub_resource type="Curve" id=3]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.992756, 0.274414 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]

flags = 4
width = 2048
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]

resource_local_to_scene = true
render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 0, 3, 0 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 0.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 1.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 2.0
damping_random = 0.5
angle = 0.0
angle_random = 1.0
scale = 8.0
scale_random = 0.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Animation", "Color", "Damping", "Emission Shape", "Flags", "Gravity", "Hue Variation", "Initial Velocity", "Linear Accel", "Orbit Velocity", "Radial Accel", "Resource", "Scale", "Spread", "Tangential Accel", "Trail" ]

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 10, 29.6557 )

[node name="fire" type="Particles2D"]

position = Vector2( -3.13553, -27.6972 )
rotation = -1.57131
emitting = false
amount = 100
lifetime = 0.7
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 5 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform", "Visibility", "Z Index" ]

[node name="burn_area" type="Area2D" parent="." index="0"]

position = Vector2( 35.6441, 0.607027 )
rotation = 1.57131
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="burn_area" index="0"]

shape = SubResource( 6 )

[node name="timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="area_entered" from="burn_area" to="." method="_on_burn_area_entered"]

[connection signal="area_exited" from="burn_area" to="." method="_on_burn_area_exited"]

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]


